Refresh Mercado Pago init_point with new token

--- a/frontend/confirmar-datos.html
+++ b/frontend/confirmar-datos.html
@@ -74,13 +74,15 @@
         })
       });
       const data = await res.json();
-      if(data.init_point){
+      if(res.ok && data.init_point){
         console.log('Mercado Pago init_point:', data.init_point);
         window.location.href = data.init_point;
+      }else{
+        throw new Error(data.error || 'No se pudo obtener link de pago');
       }
     }catch(e){
       console.error(e);
-      alert('Error al iniciar pago');
+      alert(e.message || 'Error al iniciar pago');
     }
   });
   </script>
