--- a/frontend/confirmar-datos.html
+++ b/frontend/confirmar-datos.html
@@ -49,7 +49,7 @@
       return;
     }
     try{
-      const res = await fetch(`${API_BASE_URL}/crear-preferencia`,{
+      const res = await fetch(`${API_BASE_URL}/api/mercado-pago/crear-preferencia`,{
         mode:'cors',
         method:'POST',
         headers:{'Content-Type':'application/json'},
