Add Mercado Pago public key in frontend

--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -63,7 +63,7 @@
   <button id="confirmar">Confirmar y pagar</button>
 </div>
 <script src="config.js"></script>
-<script src="https://sdk.mercadopago.com/js/v2"></script>
+<script src="https://sdk.mercadopago.com/js/v2" data-public-key="APP_USR-c28b783a-54c0-4e39-80d3-f8c7dae2b645"></script>
 <script src="checkout.js"></script>
 </body>
 </html>
