--- a/nerin_final_updated/frontend/success.html
+++ b/nerin_final_updated/frontend/success.html
@@ -38,12 +38,8 @@
       </div>
     </noscript>
     <main class="container">
-      <div id="statusIcon" class="status-icon success" aria-hidden="true">
-        <svg viewBox="0 0 24 24" class="icon">
-          <path class="draw" d="M20 6L9 17l-5-5" />
-        </svg>
-      </div>
       <article id="card" class="receipt" aria-live="polite">
+        <div class="skeleton hero"></div>
         <div class="skeleton title"></div>
         <div class="skeleton block"></div>
       </article>
