--- a/nerin_final_updated/frontend/pages/error.html
+++ b/nerin_final_updated/frontend/pages/error.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>Pago rechazado</title>
   <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
+  <link rel="stylesheet" href="/components/np-footer.css">
+  <script src="/components/np-footer.js" defer></script>
 </head>
 <body>
   <div class="contenedor">
