--- a/nerin_final_updated/frontend/checkout.html
+++ b/nerin_final_updated/frontend/checkout.html
@@ -5,6 +5,8 @@
   <title>Estado del pago</title>
   <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+  <link rel="stylesheet" href="/components/np-footer.css">
+  <script src="/components/np-footer.js" defer></script>
 </head>
 <body>
   <div class="contenedor">
