--- a/nerin_final_updated/frontend/pages/precheckout.html
+++ b/nerin_final_updated/frontend/pages/precheckout.html
@@ -4,7 +4,9 @@
     <meta http-equiv="refresh" content="0; url=/checkout-steps.html" />
     <title>Redirigiendo…</title>
     <script>window.location.replace('/checkout-steps.html');</script>
-  </head>
+    <link rel="stylesheet" href="/components/np-footer.css">
+  <script src="/components/np-footer.js" defer></script>
+</head>
   <body>
     <p>Redirigiendo al nuevo checkout...</p>
   </body>
