--- a/nerin_final_updated/frontend/pages/terminos.html
+++ b/nerin_final_updated/frontend/pages/terminos.html
@@ -69,6 +69,8 @@
     }
   </style>
     <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
+  <link rel="stylesheet" href="/components/np-footer.css">
+  <script src="/components/np-footer.js" defer></script>
 </head>
 <body>
   <header class="simple-header">
