--- a/nerin_final_updated/frontend/seguimiento.html
+++ b/nerin_final_updated/frontend/seguimiento.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seguimiento de tu pedido – NERIN</title>
           <link rel="stylesheet" href="style.css?v=mobfix-1" />
-  </head>
+    <link rel="stylesheet" href="/components/np-footer.css">
+  <script src="/components/np-footer.js" defer></script>
+</head>
   <body>
     <header>
       <div class="header-inner">
