--- a/nerin_final_updated/frontend/shop.html
+++ b/nerin_final_updated/frontend/shop.html
@@ -12,7 +12,9 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
       <link rel="stylesheet" href="style.css?v=mobfix-1" />
-  </head>
+    <link rel="stylesheet" href="/components/np-footer.css">
+  <script src="/components/np-footer.js" defer></script>
+</head>
   <body>
     <header>
       <div class="header-inner">
