--- a/nerin_final_updated/frontend/pages/precheckout.html
+++ b/nerin_final_updated/frontend/pages/precheckout.html
@@ -4,8 +4,8 @@
     <meta http-equiv="refresh" content="0; url=/checkout-steps.html" />
     <title>Redirigiendo…</title>
     <script>window.location.replace('/checkout-steps.html');</script>
-    <link rel="stylesheet" href="/components/np-footer.css">
-  <script src="/components/np-footer.js" defer></script>
+    <link rel="stylesheet" href="/components/np-footer.css?v=np-20250820">
+  <script src="/components/np-footer.js?v=np-20250820" defer></script>
 </head>
   <body>
     <p>Redirigiendo al nuevo checkout...</p>
