--- a/nerin_final_updated/frontend/seguimiento.html
+++ b/nerin_final_updated/frontend/seguimiento.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seguimiento de tu pedido – NERIN</title>
           <link rel="stylesheet" href="style.css?v=mobfix-1" />
-    <link rel="stylesheet" href="/components/np-footer.css">
-  <script src="/components/np-footer.js" defer></script>
+    <link rel="stylesheet" href="/components/np-footer.css?v=np-20250820">
+  <script src="/components/np-footer.js?v=np-20250820" defer></script>
 </head>
   <body>
     <header>
