--- a/nerin_final_updated/frontend/failure.html
+++ b/nerin_final_updated/frontend/failure.html
@@ -6,8 +6,8 @@
     <title>Pago rechazado</title>
     <link rel="stylesheet" href="style.css?v=mobfix-1" />
     <link rel="stylesheet" href="css/success.css" />
-    <link rel="stylesheet" href="/components/np-footer.css?v=np-20250820">
-  <script src="/components/np-footer.js?v=np-20250820" defer></script>
+    <link rel="stylesheet" href="/components/np-footer.css?v=np-r1">
+  <script src="/components/np-footer.js?v=np-r1" defer></script>
 </head>
   <body>
     <header>
