--- a/nerin_final_updated/frontend/pages/pendiente.html
+++ b/nerin_final_updated/frontend/pages/pendiente.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <title>Pago pendiente</title>
   <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
-  <link rel="stylesheet" href="/components/np-footer.css?v=np-20250820">
-  <script src="/components/np-footer.js?v=np-20250820" defer></script>
+  <link rel="stylesheet" href="/components/np-footer.css?v=np-r1">
+  <script src="/components/np-footer.js?v=np-r1" defer></script>
 </head>
 <body>
   <div class="contenedor">
