--- a/nerin_final_updated/frontend/pages/terminos.html
+++ b/nerin_final_updated/frontend/pages/terminos.html
@@ -69,8 +69,8 @@
     }
   </style>
     <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
-  <link rel="stylesheet" href="/components/np-footer.css?v=np-20250820">
-  <script src="/components/np-footer.js?v=np-20250820" defer></script>
+  <link rel="stylesheet" href="/components/np-footer.css?v=np-r1">
+  <script src="/components/np-footer.js?v=np-r1" defer></script>
 </head>
 <body>
   <header class="simple-header">
